# rust_oop

./: Cargo.toml  README.md
src/: composite_static_impl.rs  decorator_dyn_impl.rs  decorator_static_impl.rs  visitor_dyn_impl.rs  visitor_static_impl.rs
